UserServiceTests changes - changeUserInfo new implementation with loggedUser + new test